# Splitdronum

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  build-dll.ps1  build-dll.sh  build-host-legacy.ps1  build-host.ps1  build-launcher.ps1  build-tests.ps1  global_seats.cfg  launcher.ini  package-engine.ps1  play.ps1  seats_absolute.cfg  seats_preferred.cfg
.github/workflows/: ci.yml  release.yml
core/: ss_input.cpp  ss_input.h  ss_join.cpp  ss_join.h  ss_layout.cpp  ss_layout.h  ss_profile.cpp  ss_profile.h
dll/: ss_hook.cpp  ss_hook_mac.cpp  ss_offsets.h
host/: host.cpp  host.rc  host_qt.cpp  host_sdl.cpp  inject.cpp  overlay_qt.cpp  overlay_qt.h  ss_proc.h  ss_shm.h
launcher/: CMakeLists.txt  launcher.cpp  launcher.qrc  launcher.rc
launcher/qml/: Launcher.qml
overlay/: CMakeLists.txt  main.cpp
overlay/qml/: DisconnectCard.qml  JoinCard.qml  Overlay.qml  PlayerSetup.qml  Preview.qml  RejoinBanner.qml  SceneBrowse.qml  SceneDisconnect.qml  ScenePanels.qml  Theme.qml
tests/: test_input.cpp  test_join.cpp  test_layout.cpp  test_profile.cpp
tools/: gen_offsets.cpp  gen_offsets_mac.cpp
